2002-02-18  Scott S. Goodwin  <scott@scottg.net>

	* tclcmds.c: added ns_openssl port command. It returns the
	scPtr->port value, which happens to be the local port the conn is
	using, not the port the server is listening on. I need to do a
	query on the port the server is listening on by grabbing the port
	number from the nsd.tcl based on the module name (as you may have
	multiple instances of nsopenssl up and running).

2002-02-15  Scott S. Goodwin  <scott@scottg.net>

	* ssl.c: I was decrementing towrite by rc bytes. Problem is that
	if rc < 0 which it will be on SSL_write error, towrite will get
	bigger. This was a late night error. The #if'd out debug portion
	worked properly. Adam Zell pointed this out.

	* dumb: The previous two changes were made once before. The
	tclcmd.c fix reverted when I received a fix for some other problem
	in tclcmd.c; I neglected to do a diff between my copy and the
	fixed one that was sent to me. In the case of init.c, I'm
	uncertain how that creeped back in. Thanks to Adam Zell for
	pointing these out. Lessons learned: Always commit your changes
	right after your tests work. Always diff a file sent to you
	against your current working copy from the repository. There may
	be changes you made to your file that aren't in the contributed
	file.

	* init.c: Fixed NsOpenSSLCreateDriver; sdPtr->randomFile wasn't
	set before being possibly used.

	* tclcmds.c: Fixed SSLSockListenCallback so that the interp was
	initialized before it was possibly used.

2002-02-14  Scott S. Goodwin  <scott@scottg.net>

	* nsopenssl 2.1 released.

2002-02-13  Scott S. Goodwin  <scott@scottg.net>

	* ssl.c: The nonblocking socket fix in RunServerSSLHandshake fixed
	the Solaris problem. #if'd out debug code in NsOpenSSLSend
	function. Maybe I can go back and retry the BIO_handshake by
	unblocking the socket before I run it.

2002-02-12  Scott S. Goodwin  <scott@scottg.net>

	* ssl.c: made the socket non-blocking at the beginning of